# the.old.cosmonautics.day

./: A_star_Search.cpp  CMakeLists.txt  PathFinding.cpp  main.cpp
Menu/: Menu.h
SEM.2.4/: SEM.2.4.cpp  SEM.2.4.sln  SEM.2.4.vcxproj  SEM.2.4.vcxproj.filters  View.h  map.h  mission.h
SEM.2.4/Debug/: SEM.2.4.exe.recipe  SEM.2.4.ilk  SEM.2.4.vcxproj.FileListAbsolute.txt  vc142.idb
SEM.2.4/Debug/SEM.2.4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SEM.2.4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SEM.2.4/Release/SEM.2.4.tlog/: SEM.2.4.lastbuildstate
